@startuml

title __PROJ's Class Diagram__\n

      abstract class ph.edu.dlsu.AEmotional {
      }

      abstract class ph.edu.dlsu.APhysical {
      }

      class ph.edu.dlsu.CheckHistory {
      }

      class ph.edu.dlsu.IDoctor {
      }

      class ph.edu.dlsu.IWorker {
      }

      class ph.edu.dlsu.JMain {
      }

      class ph.edu.dlsu.MainCanvas {
      }

      class ph.edu.dlsu.PMixed {
      }

      class ph.edu.dlsu.PPhysical {
      }

      class ph.edu.dlsu.Test {
      }


  ph.edu.dlsu.CheckHistory -up-|> acm.program.ConsoleProgram
  ph.edu.dlsu.IDoctor -up-|> ph.edu.dlsu.IWorker
  ph.edu.dlsu.JMain -up-|> acm.program.ConsoleProgram
  ph.edu.dlsu.JMain o-- ph.edu.dlsu.CheckHistory : history
  ph.edu.dlsu.JMain o-- ph.edu.dlsu.MainCanvas : canvas
  ph.edu.dlsu.MainCanvas -up-|> acm.graphics.GCanvas
  ph.edu.dlsu.PMixed -up-|> ph.edu.dlsu.APhysical


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
